fixed spacing issues when page size was changed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
+
 }
 
 h1 {
@@ -20,11 +21,11 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  flex-direction: column;
 }
 
 .profile-picture {
-  position: absolute;
-  top: 5%;
+  position: fixed;
   width: 400px;
   height: 400px;
   border-radius: 50%;
@@ -39,7 +40,8 @@ body {
 
 .header-text {
   text-align: center;
-  position: relative;
+  margin-top: 500px;
+  position: absolute;
   color: rgb(0, 0, 0);
   font-size: 40px;
   top: 55%;
